tried to fix weird overflow side to side issue

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   font-family: "Noto Sans JP",
     sans-serif !important;
   overscroll-behavior-y: none;
+  overscroll-behavior-x: none;
   transition: all 0.3s;
 }
 
